apps/thelounge/thelounge.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thelounge
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thelounge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thelounge
  template:
    metadata:
      labels:
        app: thelounge
    spec:
      containers:
      - name: thelounge
        image: ghcr.io/thelounge/thelounge:4.5.2
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: thelounge-data
          mountPath: /var/opt/thelounge
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "0.5"
            memory: 512Mi
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 9000
        #   initialDelaySeconds: 30
        #   periodSeconds: 30
        #   timeoutSeconds: 10
        #   failureThreshold: 3
      volumes:
      - name: thelounge-data
        persistentVolumeClaim:
          claimName: thelounge-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: thelounge
spec:
  selector:
    app: thelounge
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
