apps/thelounge/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thelounge-https
spec:
  hostnames:
  - thelounge.menia.cc
  parentRefs:
  - name: shared-gateway
    namespace: default
    sectionName: shared-https
  rules:
  - backendRefs:
    - name: thelounge
      port: 9000
